# DirTorch

./: Cargo.toml  README.md  test.txt
src/: APP_STATE.rs  cli_action_params.rs  command.rs  command_executor.rs  get_cli_actions.rs  invoker.rs  main.rs  parser.rs
src/cli_actions/: change_directory.rs  compress.rs  concat_file.rs  copy_file.rs  create_dir.rs  create_file.rs  decompress.rs  exit.rs  file_weight.rs  get_current_dir.rs  get_file_checksum.rs  get_file_metadata.rs  list_files.rs  mod.rs  read_file.rs  search_file.rs  undo_command.rs  view_file.rs  view_history.rs
src/cli_actions/help_actions/: help.rs
src/enums/: compression_format.rs  mod.rs
src/helper_functions/: detect_compression_format.rs  fix_path.rs  format_time.rs  get_file_extension.rs  mod.rs  print_paths.rs
src/tests/: mod.rs
test_files/: input.txt
