[package]
name = "DirTorch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
dirs = "5.0.1"
walkdir = "2.5.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
ignore = "0.4.22"
flate2 = "1.0.28"
tar = "0.4.40"
rand = "0.9.0-alpha.1"
chrono = "0.4.37"
